<resources>
    <string name="app_name">APP</string>
    <string name="logout">退出登录</string>

    <string name="new_schedule">创建新活动</string>
    <string name="schedule_name">活动名称：</string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="confirm">确认</string>
    <string name="card">今日卡片</string>

    <string name="save_picture">保存图片</string>
    <string name="save_picture_fail">保存失败</string>
    <string name="save_picture_success">图片成功保存至%s目录</string>
</resources>
